Connected users table with tasks table(user_id is foreign key for tasks table). Edited Get Tasks Handler (now you can get tasks of particular user, or just all tasks, if you don't specify user id.
